# pebble

./: .dockerignore  .gitattributes  .gitignore  BAP_etalon.xlsx  Dockerfile  PLAN.md  Pebble.bat  README.md  apply_formulas.py  bench_llm_import.py  bench_results.json  build_release.py  manual_formulas.py  models.xlsx  plan-0.md  plan-1.md  plan-3.md  plan-analytic-permissions.md  plan-formula-engine.md  plan-periods  plan-tests-auth.md  render.yaml  requirements.txt  start.bat  start.command  start.py  test-avg.xlsx  test_import.py  test_verify.py  todo.md
.bench_cache/: claude-sonnet_dc7960ef694acdca.json  claude-sonnet_fd0babe7f098f950.json  deepseek-v4-flash_f8e7562c5b6b2323.json  deepseek-v4-pro_a3e2db8132dc4cf5.json  qwen3-235b-together_20e224a6bff225f7.json  qwen3-235b-together_433d9fa381a8cd8f.json
XLS-MODELS/: ANNEX 1 Simply Ecosystem FinModel 2025-2029_ENG Final.xlsx  Doscredobank FinModel ЦО 2026-2028 v.18.xlsx  actual_budget.xlsx
backend/: auth.py  config.py  conftest.py  coord_key.py  db.py  excel_formula_translator.py  formula_engine.py  formula_suggester.py  import_kb.py  llm_cache.py  main.py  migrate_to_pg.py  requirements.txt  translation_service.py  transliterate.py
docs/: branches_reference.json  index.html  it_department_briefing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
rust-calc/: Cargo.toml  pyproject.toml
rust-calc/src/: builder.rs  compiler.rs  coord.rs  engine.rs  engine_v2.rs  engine_v3.rs  engine_v4.rs  evaluator.rs  intern.rs  lib.rs  parser.rs  resolver.rs  tokenizer.rs  types.rs
(+101 files in other folders)
