[package]
name = "pebble-calc"
version = "0.1.0"
edition = "2021"

[lib]
name = "pebble_calc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
rayon = "1.10"
bincode = "1"
